llevo todo de vuelta

--- a/src/zero2hero/zero2hero_0101.ipynb
+++ b/src/zero2hero/zero2hero_0101.ipynb
@@ -40,11 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
-    "setwd(\"D:\\\\gdrive\\\\UBA2022\\\\\")  #Establezco el Working Directory"
+    "setwd(\"C:\\\\Users\\\\PC\\\\Desktop\\\\Especializacion UBA\\\\DMEyF\\\\\")  #Establezco el Working Directory"
    ]
   },
   {
@@ -65,9 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2022-08-18 15:44:04 -03\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Sys.time()"
    ]
@@ -83,9 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 56.92978\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- read.csv(\"./datasets/competencia1_2022.csv\")\n",
@@ -112,9 +142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 47.17965\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- read.csv(\"./datasets/competencia1_2022.csv\")\n",
@@ -145,8 +187,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "library( \"data.table\")   #cargo la libreria  data.table"
@@ -154,9 +200,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 2.052757\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- fread(\"./datasets/competencia1_2022.csv\")\n",
@@ -181,9 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 2.797769\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- fread(\"./datasets/competencia1_2022.csv\")\n",
