--- a/src/zero2hero/zero2hero_0110.ipynb
+++ b/src/zero2hero/zero2hero_0110.ipynb
@@ -26,9 +26,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 604010</td><td>32.3</td><td>1290864</td><td>69</td><td>1290864</td><td>69.0</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1085730</td><td> 8.3</td><td>8388608</td><td>64</td><td>1632186</td><td>12.5</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 6 of type dbl\n",
+       "\\begin{tabular}{r|llllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  604010 & 32.3 & 1290864 & 69 & 1290864 & 69.0\\\\\n",
+       "\tVcells & 1085730 &  8.3 & 8388608 & 64 & 1632186 & 12.5\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 6 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Ncells |  604010 | 32.3 | 1290864 | 69 | 1290864 | 69.0 |\n",
+       "| Vcells | 1085730 |  8.3 | 8388608 | 64 | 1632186 | 12.5 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+       "Ncells  604010 32.3 1290864    69   1290864  69.0\n",
+       "Vcells 1085730  8.3 8388608    64   1632186  12.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Loading required package: lattice\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -39,13 +96,17 @@
     "library( \"caret\")\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"D:\\\\gdrive\\\\UBA2022\\\\\")  #Aqui se debe poner la ruta de la PC local"
+    "setwd(\"C:\\\\Users\\\\PC\\\\Desktop\\\\Especializacion UBA\\\\DMEyF\\\\\")  #Aqui se debe poner la ruta de la PC local"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "dataset <- fread(\"./datasets/competencia1_2022.csv\")   #cargo el dataset #cargo el dataset\n",
@@ -54,8 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "library(\"caret\")"
@@ -63,8 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "train_rows <- createDataPartition(denero$clase_ternaria, p= 0.50, list= FALSE)"
@@ -72,9 +141,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 6 × 1 of type int</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Resample1</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 2</td></tr>\n",
+       "\t<tr><td> 7</td></tr>\n",
+       "\t<tr><td> 8</td></tr>\n",
+       "\t<tr><td> 9</td></tr>\n",
+       "\t<tr><td>10</td></tr>\n",
+       "\t<tr><td>11</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 6 × 1 of type int\n",
+       "\\begin{tabular}{l}\n",
+       " Resample1\\\\\n",
+       "\\hline\n",
+       "\t  2\\\\\n",
+       "\t  7\\\\\n",
+       "\t  8\\\\\n",
+       "\t  9\\\\\n",
+       "\t 10\\\\\n",
+       "\t 11\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 6 × 1 of type int\n",
+       "\n",
+       "| Resample1 |\n",
+       "|---|\n",
+       "|  2 |\n",
+       "|  7 |\n",
+       "|  8 |\n",
+       "|  9 |\n",
+       "| 10 |\n",
+       "| 11 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     Resample1\n",
+       "[1,]  2       \n",
+       "[2,]  7       \n",
+       "[3,]  8       \n",
+       "[4,]  9       \n",
+       "[5,] 10       \n",
+       "[6,] 11       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "head( train_rows )"
    ]
@@ -88,9 +220,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 6 × 1 of type int</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Resample1</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 2</td></tr>\n",
+       "\t<tr><td> 4</td></tr>\n",
+       "\t<tr><td> 8</td></tr>\n",
+       "\t<tr><td> 9</td></tr>\n",
+       "\t<tr><td>11</td></tr>\n",
+       "\t<tr><td>13</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 6 × 1 of type int\n",
+       "\\begin{tabular}{l}\n",
+       " Resample1\\\\\n",
+       "\\hline\n",
+       "\t  2\\\\\n",
+       "\t  4\\\\\n",
+       "\t  8\\\\\n",
+       "\t  9\\\\\n",
+       "\t 11\\\\\n",
+       "\t 13\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 6 × 1 of type int\n",
+       "\n",
+       "| Resample1 |\n",
+       "|---|\n",
+       "|  2 |\n",
+       "|  4 |\n",
+       "|  8 |\n",
+       "|  9 |\n",
+       "| 11 |\n",
+       "| 13 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     Resample1\n",
+       "[1,]  2       \n",
+       "[2,]  4       \n",
+       "[3,]  8       \n",
+       "[4,]  9       \n",
+       "[5,] 11       \n",
+       "[6,] 13       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "train_rows <- createDataPartition(denero$clase_ternaria, p= 0.50, list= FALSE)\n",
     "head( train_rows )"
@@ -121,8 +316,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "set.seed(13)"
@@ -130,9 +329,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 6 × 1 of type int</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Resample1</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 2</td></tr>\n",
+       "\t<tr><td> 3</td></tr>\n",
+       "\t<tr><td> 4</td></tr>\n",
+       "\t<tr><td> 6</td></tr>\n",
+       "\t<tr><td>12</td></tr>\n",
+       "\t<tr><td>14</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 6 × 1 of type int\n",
+       "\\begin{tabular}{l}\n",
+       " Resample1\\\\\n",
+       "\\hline\n",
+       "\t  2\\\\\n",
+       "\t  3\\\\\n",
+       "\t  4\\\\\n",
+       "\t  6\\\\\n",
+       "\t 12\\\\\n",
+       "\t 14\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 6 × 1 of type int\n",
+       "\n",
+       "| Resample1 |\n",
+       "|---|\n",
+       "|  2 |\n",
+       "|  3 |\n",
+       "|  4 |\n",
+       "|  6 |\n",
+       "| 12 |\n",
+       "| 14 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     Resample1\n",
+       "[1,]  2       \n",
+       "[2,]  3       \n",
+       "[3,]  4       \n",
+       "[4,]  6       \n",
+       "[5,] 12       \n",
+       "[6,] 14       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "train_rows <- createDataPartition(denero$clase_ternaria, p= 0.50, list= FALSE)\n",
     "head( train_rows )"
@@ -147,9 +409,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 6 × 1 of type int</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Resample1</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 2</td></tr>\n",
+       "\t<tr><td> 3</td></tr>\n",
+       "\t<tr><td> 4</td></tr>\n",
+       "\t<tr><td> 6</td></tr>\n",
+       "\t<tr><td>12</td></tr>\n",
+       "\t<tr><td>14</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 6 × 1 of type int\n",
+       "\\begin{tabular}{l}\n",
+       " Resample1\\\\\n",
+       "\\hline\n",
+       "\t  2\\\\\n",
+       "\t  3\\\\\n",
+       "\t  4\\\\\n",
+       "\t  6\\\\\n",
+       "\t 12\\\\\n",
+       "\t 14\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 6 × 1 of type int\n",
+       "\n",
+       "| Resample1 |\n",
+       "|---|\n",
+       "|  2 |\n",
+       "|  3 |\n",
+       "|  4 |\n",
+       "|  6 |\n",
+       "| 12 |\n",
+       "| 14 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     Resample1\n",
+       "[1,]  2       \n",
+       "[2,]  3       \n",
+       "[3,]  4       \n",
+       "[4,]  6       \n",
+       "[5,] 12       \n",
+       "[6,] 14       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "set.seed(13)  #uso la misma semilla que antes\n",
     "train_rows <- createDataPartition(denero$clase_ternaria, p= 0.50, list= FALSE)\n",
