--- a/src/zero2hero/zero2hero_0111.ipynb
+++ b/src/zero2hero/zero2hero_0111.ipynb
@@ -23,9 +23,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 604010</td><td>32.3</td><td>1290864</td><td>69</td><td>1290864</td><td>69.0</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1085730</td><td> 8.3</td><td>8388608</td><td>64</td><td>1632186</td><td>12.5</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 6 of type dbl\n",
+       "\\begin{tabular}{r|llllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  604010 & 32.3 & 1290864 & 69 & 1290864 & 69.0\\\\\n",
+       "\tVcells & 1085730 &  8.3 & 8388608 & 64 & 1632186 & 12.5\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 6 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Ncells |  604010 | 32.3 | 1290864 | 69 | 1290864 | 69.0 |\n",
+       "| Vcells | 1085730 |  8.3 | 8388608 | 64 | 1632186 | 12.5 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+       "Ncells  604010 32.3 1290864    69   1290864  69.0\n",
+       "Vcells 1085730  8.3 8388608    64   1632186  12.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Loading required package: lattice\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -36,13 +93,17 @@
     "library( \"caret\")\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"D:\\\\gdrive\\\\UBA2022\\\\\")  #Aqui se debe poner la ruta de la PC local"
+    "setwd(\"C:\\\\Users\\\\PC\\\\Desktop\\\\Especializacion UBA\\\\DMEyF\\\\\")  #Aqui se debe poner la ruta de la PC local"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "dataset <- fread(\"./datasets/competencia1_2022.csv\")   #cargo el dataset #cargo el dataset\n",
@@ -51,8 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "#creo training con 70%  y testing con 30%\n",
@@ -71,8 +136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "param  <- list(\"cp\"= -0.5,\n",
@@ -91,8 +160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "#genero el modelo\n",
@@ -111,8 +184,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "prediccion  <- predict( modelo, dtest, type = \"prob\")"
@@ -134,8 +211,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "prob_baja2  <- prediccion[, \"BAJA+2\"]"
@@ -205,8 +286,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "ganancia_testing <- dtest[ , sum(  (prob_baja2>0.025) * ifelse( clase_ternaria==\"BAJA+2\", 78000, -2000) )]"
@@ -214,9 +299,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "4618000"
+      ],
+      "text/latex": [
+       "4618000"
+      ],
+      "text/markdown": [
+       "4618000"
+      ],
+      "text/plain": [
+       "[1] 4618000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "ganancia_testing"
    ]
@@ -232,8 +340,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "ganancia_testing_normalizada  <-  ganancia_testing/0.3"
@@ -241,9 +353,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "15393333.3333333"
+      ],
+      "text/latex": [
+       "15393333.3333333"
+      ],
+      "text/markdown": [
+       "15393333.3333333"
+      ],
+      "text/plain": [
+       "[1] 15393333"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "ganancia_testing_normalizada"
    ]
