--- a/src/zero2hero/zero2hero_0101.ipynb
+++ b/src/zero2hero/zero2hero_0101.ipynb
@@ -40,11 +40,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'setwd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Maestria\\DMEyF\\labo\\src\\zero2hero\\zero2hero_0101.ipynb Celda 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Maestria/DMEyF/labo/src/zero2hero/zero2hero_0101.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m setwd(\u001b[39m\"\u001b[39m\u001b[39mD:\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mMaestria\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mDMEyF\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'setwd' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "setwd(\"D:\\\\gdrive\\\\UBA2022\\\\\")  #Establezco el Working Directory"
+    "setwd(\"D:\\\\Maestria\\\\DMEyF\")  #Establezco el Working Directory"
    ]
   },
   {
@@ -65,9 +77,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Sys' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Maestria\\DMEyF\\labo\\src\\zero2hero\\zero2hero_0101.ipynb Celda 9\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Maestria/DMEyF/labo/src/zero2hero/zero2hero_0101.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m Sys\u001b[39m.\u001b[39mtime()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Sys' is not defined"
+     ]
+    }
+   ],
    "source": [
     "Sys.time()"
    ]
@@ -218,17 +242,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
-   "language": "R",
-   "name": "ir"
+   "display_name": "Python 3.10.5 64-bit",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "r",
-   "file_extension": ".r",
-   "mimetype": "text/x-r-source",
-   "name": "R",
-   "pygments_lexer": "r",
-   "version": "4.2.1"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8c3d4d9970fc5c09c50d9318a9c7fbf4d0159e4b28833276f5678ee22bded273"
+   }
   }
  },
  "nbformat": 4,
